--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="body_text">Текст заметки</string>
     <string name="new_note_title">New note</string>
     <string name="ok_bth_title">ok</string>
+    <string name="logout_dialog_message">all notes will be save</string>
+    <string name="logout_menu_title">logout</string>
+    <string name="logout_dialog_cancel">cancel</string>
+    <string name="logout_dialog_title">logout</string>
+    <string name="change_color_menu_title">Change color</string>
+    <string name="delete_menu_title">Delete menu</string>
+    <string name="delete_dialog_messege">delete messege</string>
+    <string name="cancel_btn_title">cancel</string>
+
 </resources>
